Added missing clients and users APIs
