# backend/internal/database/model/user.go
@@ -5,6 +5,7 @@ import "time"
 type User struct {
 	Username     string    `json:"username" gorm:"primarykey"`
 	PasswordHash string    `json:"-" gorm:"password_hash"`
+	Password     string    `json:"password,omitempty" gorm:"-"` // Only used to display generated password after creation
 	CreatedAt    time.Time `json:"created_at"`
 	UpdatedAt    time.Time `json:"updated_at"`
 }
