# backend/internal/http/docs/swagger.yaml
@@ -19,7 +19,39 @@ definitions:
       user:
         $ref: '#/definitions/model.User'
     type: object
-  handler.CheckQuery:
+  handler.CheckRequest:
+    properties:
+      checks:
+        items:
+          $ref: '#/definitions/handler.CheckRequestQuery'
+        type: array
+    required:
+    - checks
+    type: object
+  handler.CheckRequestQuery:
+    properties:
+      action:
+        type: string
+      principal:
+        type: string
+      resource_kind:
+        type: string
+      resource_value:
+        type: string
+    required:
+    - action
+    - principal
+    - resource_kind
+    - resource_value
+    type: object
+  handler.CheckResponse:
+    properties:
+      checks:
+        items:
+          $ref: '#/definitions/handler.CheckResponseQuery'
+        type: array
+    type: object
+  handler.CheckResponseQuery:
     properties:
       action:
         type: string
@@ -36,22 +68,6 @@ definitions:
     - principal
     - resource_kind
     - resource_value
-    type: object
-  handler.CheckRequest:
-    properties:
-      checks:
-        items:
-          $ref: '#/definitions/handler.CheckQuery'
-        type: array
-    required:
-    - checks
-    type: object
-  handler.CheckResponse:
-    properties:
-      checks:
-        items:
-          $ref: '#/definitions/handler.CheckQuery'
-        type: array
     type: object
   handler.ClientCreateRequest:
     properties:
@@ -185,6 +201,14 @@ definitions:
     required:
     - policies
     type: object
+  handler.UserCreateRequest:
+    properties:
+      username:
+        example: my-user
+        type: string
+    required:
+    - username
+    type: object
   model.Action:
     properties:
       created_at:
@@ -305,6 +329,9 @@ definitions:
     properties:
       created_at:
         type: string
+      password:
+        description: Only used to display generated password after creation
+        type: string
       updated_at:
         type: string
       username:
@@ -420,6 +447,35 @@ paths:
       summary: Authenticates a user
       tags:
       - Auth
+  /v1/check:
+    post:
+      parameters:
+      - description: Check request
+        in: body
+        name: default
+        required: true
+        schema:
+          $ref: '#/definitions/handler.CheckRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.CheckResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - Authentication: []
+      summary: Check if a principal has access to do action on resource
+      tags:
+      - Check
   /v1/clients:
     get:
       parameters:
@@ -493,6 +549,28 @@ paths:
       security:
       - Authentication: []
       summary: Creates a new client
+      tags:
+      - Client
+  /v1/clients/{identifier}:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Client'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - Authentication: []
+      summary: Deletes a client
       tags:
       - Client
   /v1/policies:
@@ -996,4 +1074,101 @@ paths:
       summary: Retrieve a client token
       tags:
       - Auth
+  /v1/users:
+    get:
+      parameters:
+      - description: page number
+        example: 1
+        in: query
+        name: page
+        type: integer
+      - default: 100
+        description: page size
+        in: query
+        maximum: 1000
+        minimum: 1
+        name: size
+        type: integer
+      - description: filter on a field
+        example: name:contains:something
+        in: query
+        name: filter
+        type: string
+      - description: sort field and order
+        example: name:desc
+        in: query
+        name: sort
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.User'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - Authentication: []
+      summary: Lists users
+      tags:
+      - User
+    post:
+      parameters:
+      - description: User creation request
+        in: body
+        name: default
+        required: true
+        schema:
+          $ref: '#/definitions/handler.UserCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - Authentication: []
+      summary: Creates a new user
+      tags:
+      - User
+  /v1/users/{identifier}:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      security:
+      - Authentication: []
+      summary: Deletes a user
+      tags:
+      - User
 swagger: "2.0"
